--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=user-service
 server.port = 9060
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shippingDB
-spring.datasource.username=postgres
-spring.datasource.password=POSTGRESPASSWORD
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
